--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="" />
-  <meta name="keywords" content="" />
+  <meta name="description" content="Content Karma is a provider of content writing services for small to medium businesses." />
+  <meta name="keywords" content="content karma, content marketing, content solutions, writing services" />
   <link rel="stylesheet" href="assets/css/style.css" />
-  <title>Document</title>
+  <title>Content Karma</title>
 </head>
 <body>
-  
+
 </body>
 </html>
