--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Content Karma is a provider of content writing services for small to medium businesses." />
+  <meta name="description"
+    content="Content Karma is a provider of content writing services for small to medium businesses." />
   <meta name="keywords" content="content karma, content marketing, content solutions, writing services" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <title>Content Karma</title>
 </head>
-<body>
 
+<body>
+  <header>Header content - Logo and navigation links</header>
+  <section>Introduction/Welcome</section>
+  <section>Services</section>
+  <section>Team</section>
+  <section>Pricing</section>
+  <section>Testimonials</section>
+  <section>Contact Form</section>
+  <footer>Footer content - Copyright notice and links to social channels</footer>
 </body>
+
 </html>
