--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
 </head>
 
 <body>
-  <header>Header content - Logo and navigation links</header>
+  <header>
+    <a href="#" id="logo">
+      <img role="banner" src="assets/images/logo-101x150.png" alt="Content Karma Logo" >
+      <span aria-hidden="true">CONTENT <br> KARMA</span>
+    </a>
+    <nav>
+      <ul>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><a href="#">Testimonials</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
   <section>Introduction/Welcome</section>
   <section>Services</section>
   <section>Team</section>
