Feat: Add style to header, logo and navigation

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-  <header>
+  <header class="content-padding">
     <a href="#" id="logo">
-      <img role="banner" src="assets/images/logo-101x150.png" alt="Content Karma Logo" >
-      <span aria-hidden="true">CONTENT <br> KARMA</span>
+      <img class="logo-img" role="banner" src="assets/images/logo-101x150.png" alt="">
+      <span class="logo-heading" aria-hidden="true">CONTENT <br> KARMA</span>
     </a>
-    <nav>
+    <nav id="navigation-container">
       <ul>
         <li><a href="#">Services</a></li>
         <li><a href="#">Team</a></li>
