Style: Remove content-padding class
Removed content-padding class and added padding to header styling.
Renamed the class to section-padding and commented out for later reuse.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <header class="content-padding">
+  <header>
     <a href="#" id="logo">
       <img class="logo-img" role="banner" src="assets/images/logo-101x150.png" alt="">
       <span class="logo-heading" aria-hidden="true">CONTENT <br> KARMA</span>
