Feat: Add structure and content to hero section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
       </ul>
     </nav>
   </header>
-  <section>Introduction/Welcome</section>
+  <section>
+    <h1>Content production left you with no time to follow leads?</h1>
+    <p>We produce content to get your audience engaged, leaving you free to grow your business.</p>
+    <form action="#">
+      <button type="submit">Contact us!</button>
+    </form>
+  </section>
   <section>Services</section>
   <section>Team</section>
   <section>Pricing</section>
