Style: Add hero section styles and heading sizes

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       </ul>
     </nav>
   </header>
-  <section>
+  <section id="hero-section">
     <h1>Content production left you with no time to follow leads?</h1>
-    <p>We produce content to get your audience engaged, leaving you free to grow your business.</p>
+    <p class="hero-paragraph">We produce content to get your audience engaged, leaving you free to grow your business.</p>
     <form action="#">
-      <button type="submit">Contact us!</button>
+      <button class="std-btn" type="submit">Contact us!</button>
     </form>
   </section>
   <section>Services</section>
