Style: Add button hover and active state styling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   </header>
   <section id="hero-section">
     <h1>Content production left you with no time to follow leads?</h1>
-    <p class="hero-paragraph">We produce content to get your audience engaged, leaving you free to grow your business.</p>
+    <p class="hero-paragraph">
+      We produce content to get your audience engaged, leaving you free to grow your business.
+    </p>
     <form action="#">
       <button class="std-btn" type="submit">Contact us!</button>
     </form>
