Feat: Add structure to services section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,19 @@
       <button class="std-btn" type="submit">Contact us!</button>
     </form>
   </section>
-  <section>Services</section>
+  <section id="services-section">
+    <h2>How we can help you?</h2>
+    <div>
+      <div>
+        <img src="https://via.placeholder.com/150x100" alt="Description of image">
+        <h3>Lorem incididunt</h3>
+        <p>
+          Mollit Lorem exercitation est eu culpa id exercitation sit exercitation
+          labore elit velit deserunt.
+        </p>
+      </div>
+    </div>
+  </section>
   <section>Team</section>
   <section>Pricing</section>
   <section>Testimonials</section>
