Style: Add services section styling

--- a/index.html
+++ b/index.html
@@ -38,9 +38,17 @@
     </form>
   </section>
   <section id="services-section">
-    <h2>How we can help you?</h2>
-    <div>
-      <div>
+    <h2 class="section-heading">How we can help you?</h2>
+    <div id="services-container">
+      <div class="service-item">
+        <img src="https://via.placeholder.com/150x100" alt="Description of image">
+        <h3>Lorem incididunt</h3>
+        <p>
+          Mollit Lorem exercitation est eu culpa id exercitation sit exercitation
+          labore elit velit deserunt.
+        </p>
+      </div>
+      <div class="service-item">
         <img src="https://via.placeholder.com/150x100" alt="Description of image">
         <h3>Lorem incididunt</h3>
         <p>
