Feat: Add content to the services section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   <section id="hero-section">
     <h1>Content production left you with no time to follow leads?</h1>
     <p class="hero-paragraph">
-      We produce content to get your audience engaged, leaving you free to grow your business.
+      We produce content to get your audience engaged, leaving you free to grow
+      your business.
     </p>
     <form action="#">
       <button class="std-btn" type="submit">Contact us!</button>
@@ -41,19 +42,37 @@
     <h2 class="section-heading">How we can help you?</h2>
     <div id="services-container">
       <div class="service-item">
-        <img src="https://via.placeholder.com/150x100" alt="Description of image">
-        <h3>Lorem incididunt</h3>
+        <img class="service-item-img" src="assets/images/service-social.svg" alt="">
+        <h3>Social Media</h3>
         <p>
-          Mollit Lorem exercitation est eu culpa id exercitation sit exercitation
-          labore elit velit deserunt.
+          We optimize and manage your socials, posting content and interacting
+          with your audience to improve impressions and engagement.
         </p>
       </div>
       <div class="service-item">
-        <img src="https://via.placeholder.com/150x100" alt="Description of image">
-        <h3>Lorem incididunt</h3>
+        <img class="service-item-img" src="assets/images/service-newsletter.svg" alt="">
+        <h3>Newsletters</h3>
         <p>
-          Mollit Lorem exercitation est eu culpa id exercitation sit exercitation
-          labore elit velit deserunt.
+          One of the most effective tools in marketing, we curate content to
+          promote a specials offer or focus on a topic of interest to your
+          subscribers.
+        </p>
+      </div>
+      <div class="service-item">
+        <img class="service-item-img" src="assets/images/service-blog.svg" alt="">
+        <h3>Blog Posts</h3>
+        <p>
+          One of the best ways to improve search rankings. We’ll help you come
+          up with topics based on what your target audience wants to know and
+          tailor it to your brand.
+        </p>
+      </div>
+      <div class="service-item">
+        <img class="service-item-img" src="assets/images/service-brand.svg" alt="">
+        <h3>Brand Review</h3>
+        <p>
+          We review all website copy and your content strategy to make a 6 month
+          action plan guaranteed to improve your SEO!
         </p>
       </div>
     </div>
