Feat: Add structure to team section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,19 @@
       </div>
     </div>
   </section>
-  <section>Team</section>
+  <section id="team-section">
+    <h2 class="section-heading">Meet the team!</h2>
+    <div>
+      <div>
+        <img src="https://via.placeholder.com/100x100" alt="">
+        <p>Name</p>
+        <p>About</p>
+        <div>
+          Social links
+        </div>
+      </div>
+    </div>
+  </section>
   <section>Pricing</section>
   <section>Testimonials</section>
   <section>Contact Form</section>
