Feat: Add content and structure to team section

--- a/index.html
+++ b/index.html
@@ -79,21 +79,55 @@
   </section>
   <section id="team-section">
     <h2 class="section-heading">Meet the team!</h2>
-    <div>
-      <div>
-        <img src="https://via.placeholder.com/100x100" alt="">
-        <p>Name</p>
-        <p>About</p>
-        <div>
-          Social links
+    <div id="team-container">
+      <div class="team-item">
+        <div class="team-item-content">
+          <img class="team-item-content-image" src="https://via.placeholder.com/100x100" alt="">
+          <p class="team-item-content-name">Lilly Stone</p>
+          <p class="team-item-content-role">Brand Manager</p>
+          <p class="team-item-content-intro">
+            I look after your brand and ensure our work is always consistent
+            with your vision.
+          </p>
+        </div>
+        <div class="team-item-socials">
+          <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
         </div>
       </div>
+
+      <div class="team-item">
+        <div class="team-item-content">
+          <img class="team-item-content-image" src="https://via.placeholder.com/100x100" alt="">
+          <p class="team-item-content-name">Paul Smith</p>
+          <p class="team-item-content-role">Staff Writer</p>
+          <p class="team-item-content-intro">
+            As the resident writer of content, my passion is to tell stories
+            your audience will love.
+          </p>
+        </div>
+        <div class="team-item-socials">
+          <a href="https://medium.com/" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-medium-m"></i>
+          </a>
+          <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+        </div>
+      </div>
+      
     </div>
   </section>
   <section>Pricing</section>
   <section>Testimonials</section>
   <section>Contact Form</section>
   <footer>Footer content - Copyright notice and links to social channels</footer>
+  <!-- Font Awesome Script -->
+  <script src="https://kit.fontawesome.com/1b0e724256.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
