Refactor: Replace placeholder team images

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div id="team-container">
       <div class="team-item">
         <div class="team-item-content">
-          <img class="team-item-content-image" src="https://via.placeholder.com/100x100" alt="">
+          <img class="team-item-content-image" src="assets/images/team-lilly.png" alt="">
           <p class="team-item-content-name">Lilly Stone</p>
           <p class="team-item-content-role">Brand Manager</p>
           <p class="team-item-content-intro">
@@ -102,7 +102,7 @@
 
       <div class="team-item">
         <div class="team-item-content">
-          <img class="team-item-content-image" src="https://via.placeholder.com/100x100" alt="">
+          <img class="team-item-content-image" src="assets/images/team-paul.png" alt="">
           <p class="team-item-content-name">Paul Smith</p>
           <p class="team-item-content-role">Staff Writer</p>
           <p class="team-item-content-intro">
