Feat: Add structure to pricing section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
           </a>
         </div>
       </div>
-
       <div class="team-item">
         <div class="team-item-content">
           <img class="team-item-content-image" src="assets/images/team-paul.png" alt="">
@@ -119,10 +118,28 @@
           </a>
         </div>
       </div>
-      
     </div>
   </section>
-  <section>Pricing</section>
+  <section id="pricing-section">
+    <h2 class="section-heading">We offer content packages!</h2>
+    <div id="pricing-container">
+      <div class="pricing-item">
+        <div class="pricing-item-heading">
+          <span class="pricing-item-heading-title">Package Name</span>
+          <span class="pricing-item-heading-cost">Cost</span>
+        </div>
+        <div class="pricing-item-details">
+          <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+            <li>Item 4</li>
+            <li>Item 5</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
   <section>Testimonials</section>
   <section>Contact Form</section>
   <footer>Footer content - Copyright notice and links to social channels</footer>
