Style: Add pricing section styling

--- a/index.html
+++ b/index.html
@@ -138,6 +138,36 @@
           </ul>
         </div>
       </div>
+      <div class="pricing-item pricing-item-emphasis">
+        <div class="pricing-item-heading">
+          <span class="pricing-item-heading-title">Package Name</span>
+          <span class="pricing-item-heading-cost">Cost</span>
+        </div>
+        <div class="pricing-item-details">
+          <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+            <li>Item 4</li>
+            <li>Item 5</li>
+          </ul>
+        </div>
+      </div>
+      <div class="pricing-item">
+        <div class="pricing-item-heading">
+          <span class="pricing-item-heading-title">Package Name</span>
+          <span class="pricing-item-heading-cost">Cost</span>
+        </div>
+        <div class="pricing-item-details">
+          <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+            <li>Item 4</li>
+            <li>Item 5</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </section>
   <section>Testimonials</section>
