Feat: Add heading and button to pricing section
Added as call to action for this section.

--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
         </div>
       </div>
     </div>
+    <h3 class="section-heading">Not what you are looking for?</h3>
+    <form action="#">
+      <button class="std-btn" type="submit">Request Quote</button>
+    </form>
   </section>
   <section>Testimonials</section>
   <section>Contact Form</section>
