Feat: Add structure to testimonial section

--- a/index.html
+++ b/index.html
@@ -174,7 +174,24 @@
       <button class="std-btn" type="submit">Request Quote</button>
     </form>
   </section>
-  <section>Testimonials</section>
+  <section id="testimonials-section">
+    <h2 class="section-heading">What Customer say about us</h2>
+    <div>
+      <div>
+        <img src="https://via.placeholder.com/100x100" alt="">
+        <p>Name</p>
+        <p>
+          <em>
+            <b>"</b>
+            Molestiae, aut! Fugit soluta omnis praesentium, inventore tempora
+            vel suscipit ad.
+            <b>"</b>
+          </em>
+        </p>
+      </div>
+    </div>
+
+  </section>
   <section>Contact Form</section>
   <footer>Footer content - Copyright notice and links to social channels</footer>
   <!-- Font Awesome Script -->
