--- a/index.html
+++ b/index.html
@@ -125,46 +125,44 @@
     <div id="pricing-container">
       <div class="pricing-item">
         <div class="pricing-item-heading">
-          <span class="pricing-item-heading-title">Package Name</span>
-          <span class="pricing-item-heading-cost">Cost</span>
+          <span class="pricing-item-heading-title">Starter</span>
+          <span class="pricing-item-heading-cost">£100</span>
         </div>
         <div class="pricing-item-details">
           <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-            <li>Item 4</li>
-            <li>Item 5</li>
+            <li>1 x 500 word blog post</li>
+            <li>2 revisions included</li>
+            <li>2 hours of social engagement</li>
           </ul>
         </div>
       </div>
       <div class="pricing-item pricing-item-emphasis">
         <div class="pricing-item-heading">
-          <span class="pricing-item-heading-title">Package Name</span>
-          <span class="pricing-item-heading-cost">Cost</span>
+          <span class="pricing-item-heading-title">Popular</span>
+          <span class="pricing-item-heading-cost">£500</span>
         </div>
         <div class="pricing-item-details">
           <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-            <li>Item 4</li>
-            <li>Item 5</li>
+            <li>Development of a month-long content marketing plan</li>
+            <li>4 x 500 word blog posts</li>
+            <li>unlimited revisions</li>
+            <li>4 hours of social engagement per post</li>
+            <li>Search engine rank tracking</li>
+            <li>Review meeting after each post to tailor future content</li>
           </ul>
         </div>
       </div>
       <div class="pricing-item">
         <div class="pricing-item-heading">
-          <span class="pricing-item-heading-title">Package Name</span>
-          <span class="pricing-item-heading-cost">Cost</span>
+          <span class="pricing-item-heading-title">Super</span>
+          <span class="pricing-item-heading-cost">£700+</span>
         </div>
         <div class="pricing-item-details">
           <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-            <li>Item 4</li>
-            <li>Item 5</li>
+            <li>All items in the Popular package +</li>
+            <li>Website copy review and recommendations</li>
+            <li>Website SEO Review</li>
+            <li>Creation/Review of a style guide for your brand</li>
           </ul>
         </div>
       </div>
@@ -190,7 +188,6 @@
         </p>
       </div>
     </div>
-
   </section>
   <section>Contact Form</section>
   <footer>Footer content - Copyright notice and links to social channels</footer>
