--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
   </section>
   <section id="testimonials-section">
     <h2 class="section-heading">What Customer say about us</h2>
-    <div>
-      <div>
-        <img src="https://via.placeholder.com/100x100" alt="">
-        <p>Name</p>
-        <p>
+    <div class="team-container">
+      <div class="team-item team-item-content">
+        <img class="team-item-content-image" src="https://via.placeholder.com/100x100" alt="">
+        <p class="team-item-content-name">Name</p>
+        <p class="team-item-content-intro">
           <em>
             <b>"</b>
             Molestiae, aut! Fugit soluta omnis praesentium, inventore tempora
