Fix: Change team-container attribute from id to class
team-container style had previously been changed from an id to a class
so it could be used in the testimonial section. The attribute had not
been updated in the team section.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </section>
   <section id="team-section">
     <h2 class="section-heading">Meet the team!</h2>
-    <div id="team-container">
+    <div class="team-container">
       <div class="team-item">
         <div class="team-item-content">
           <img class="team-item-content-image" src="assets/images/team-lilly.png" alt="">
