Refactor: Replace placeholder text in testimonial section

--- a/index.html
+++ b/index.html
@@ -175,17 +175,46 @@
   <section id="testimonials-section">
     <h2 class="section-heading">What Customer say about us</h2>
     <div class="team-container">
-      <div class="team-item team-item-content">
-        <img class="team-item-content-image" src="https://via.placeholder.com/100x100" alt="">
-        <p class="team-item-content-name">Name</p>
-        <p class="team-item-content-intro">
-          <em>
-            <b>"</b>
-            Molestiae, aut! Fugit soluta omnis praesentium, inventore tempora
-            vel suscipit ad.
-            <b>"</b>
-          </em>
-        </p>
+      <div class="team-container">
+        <div class="team-item team-item-content">
+          <img class="team-item-content-image" src="https://via.placeholder.com/100x100" alt="">
+          <p class="team-item-content-name">Jennifer Walters</p>
+          <p class="team-item-content-intro">
+            <em>
+              <b>"</b>
+              Working with the team at ContentKarma has been a joy! They helped
+              strengthen my brand recognition by producing content my customers
+              love to share.
+              <b>"</b>
+            </em>
+          </p>
+        </div>
+        <div class="team-item team-item-content">
+          <img class="team-item-content-image" src="https://via.placeholder.com/100x100" alt="">
+          <p class="team-item-content-name">Jordan O'Keefe</p>
+          <p class="team-item-content-intro">
+            <em>
+              <b>"</b>
+              Perfect content every time! My ROI was so quick as the team helped
+              me stand out in a very crowded marketplace.
+              <b>"</b>
+            </em>
+          </p>
+        </div>
+        <div class="team-item team-item-content">
+          <img class="team-item-content-image" src="https://via.placeholder.com/100x100" alt="">
+          <p class="team-item-content-name">Monica Rambeau</p>
+          <p class="team-item-content-intro">
+            <em>
+              <b>"</b>
+              I was struggling to keep up with the admin of my growing business
+              and not lose touch with my subscribers. Paul was able to put
+              together an content strategy which not only engaged my audience but
+              helped introduce my brand into new territories.
+              <b>"</b>
+            </em>
+          </p>
+        </div>
       </div>
     </div>
   </section>
