--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <div class="team-container">
       <div class="team-container">
         <div class="team-item team-item-content">
-          <img class="team-item-content-image" src="https://via.placeholder.com/100x100" alt="">
+          <img class="team-item-content-image" src="assets/images/testimonials-jennifer.png" alt="">
           <p class="team-item-content-name">Jennifer Walters</p>
           <p class="team-item-content-intro">
             <em>
@@ -190,7 +190,7 @@
           </p>
         </div>
         <div class="team-item team-item-content">
-          <img class="team-item-content-image" src="https://via.placeholder.com/100x100" alt="">
+          <img class="team-item-content-image" src="assets/images/testimonials-jordan.png" alt="">
           <p class="team-item-content-name">Jordan O'Keefe</p>
           <p class="team-item-content-intro">
             <em>
@@ -202,7 +202,7 @@
           </p>
         </div>
         <div class="team-item team-item-content">
-          <img class="team-item-content-image" src="https://via.placeholder.com/100x100" alt="">
+          <img class="team-item-content-image" src="assets/images/testimonials-monica.png" alt="">
           <p class="team-item-content-name">Monica Rambeau</p>
           <p class="team-item-content-intro">
             <em>
