Feat: Add structure and content to contact section

--- a/index.html
+++ b/index.html
@@ -218,7 +218,20 @@
       </div>
     </div>
   </section>
-  <section>Contact Form</section>
+  <section id="contact-section">
+    <h2 class="section-heading">Get in touch</h2>
+    <div id="contact-container">
+      <form action="#">
+        <label for="full-name">Name:</label>
+        <input type="text" name="full-name" id="full-name">
+        <label for="email">Email Address:</label>
+        <input type="email" name="email" id="email" required>
+        <label for="message-content">Message:</label>
+        <textarea name="message-content" id="message-content" rows="10"></textarea>
+        <button>Send Message</button>
+      </form>
+    </div>
+  </section>
   <footer>Footer content - Copyright notice and links to social channels</footer>
   <!-- Font Awesome Script -->
   <script src="https://kit.fontawesome.com/1b0e724256.js" crossorigin="anonymous"></script>
