Style: Add contact section styling

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <input type="email" name="email" id="email" required>
         <label for="message-content">Message:</label>
         <textarea name="message-content" id="message-content" rows="10"></textarea>
-        <button>Send Message</button>
+        <button class="std-btn" type="submit">Send Message</button>
       </form>
     </div>
   </section>
