--- a/index.html
+++ b/index.html
@@ -223,11 +223,18 @@
     <div id="contact-container">
       <form action="#">
         <label for="full-name">Name:</label>
-        <input type="text" name="full-name" id="full-name">
+        <input type="text" name="full-name" id="full-name" placeholder="Enter your name..">
         <label for="email">Email Address:</label>
-        <input type="email" name="email" id="email" required>
+        <input type="email" name="email" id="email" placeholder="Enter your email address.." required>
+        <label for="subject">Subject:</label>
+            <select id="subject" name="subject" required>
+              <option value="">-- Please select an option --</option>
+              <option value="general-enquiry">General Enquiry</option>
+              <option value="request-quote">Request Quote</option>
+              <option value="discuss-packages">Discuss Packages</option>
+            </select>
         <label for="message-content">Message:</label>
-        <textarea name="message-content" id="message-content" rows="10"></textarea>
+        <textarea name="message-content" id="message-content" rows="10" placeholder="Let us know how we can help.."></textarea>
         <button class="std-btn" type="submit">Send Message</button>
       </form>
     </div>
