Refactor: Format code and remove unused code

--- a/index.html
+++ b/index.html
@@ -227,14 +227,15 @@
         <label for="email">Email Address:</label>
         <input type="email" name="email" id="email" placeholder="Enter your email address.." required>
         <label for="subject">Subject:</label>
-            <select id="subject" name="subject" required>
-              <option value="">-- Please select an option --</option>
-              <option value="general-enquiry">General Enquiry</option>
-              <option value="request-quote">Request Quote</option>
-              <option value="discuss-packages">Discuss Packages</option>
-            </select>
+        <select id="subject" name="subject" required>
+          <option value="">-- Please select an option --</option>
+          <option value="general-enquiry">General Enquiry</option>
+          <option value="request-quote">Request Quote</option>
+          <option value="discuss-packages">Discuss Packages</option>
+        </select>
         <label for="message-content">Message:</label>
-        <textarea name="message-content" id="message-content" rows="10" placeholder="Let us know how we can help.."></textarea>
+        <textarea name="message-content" id="message-content" rows="10"
+          placeholder="Let us know how we can help.."></textarea>
         <button class="std-btn" type="submit">Send Message</button>
       </form>
     </div>
