Feat: Add structure and content to footer
Style change of logo from an id to a class was to accommodate its use in
 the footer.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <a href="#" id="logo">
+    <a href="#" class="logo">
       <img class="logo-img" role="banner" src="assets/images/logo-101x150.png" alt="">
       <span class="logo-heading" aria-hidden="true">CONTENT <br> KARMA</span>
     </a>
@@ -240,7 +240,21 @@
       </form>
     </div>
   </section>
-  <footer>Footer content - Copyright notice and links to social channels</footer>
+  <footer>
+    <a href="#" class="logo">
+      <img class="logo-img" role="banner" src="assets/images/logo-101x150.png" alt="">
+      <span class="logo-heading" aria-hidden="true">CONTENT <br> KARMA</span>
+    </a>
+    <div>
+      <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="https://facebook.com" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-facebook"></i>
+      </a>
+    </div>
+    <span>© 2021 ContentKarma, Ltd. All rights reserved.</span>
+  </footer>
   <!-- Font Awesome Script -->
   <script src="https://kit.fontawesome.com/1b0e724256.js" crossorigin="anonymous"></script>
 </body>
