Style: Add footer styling

--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
     </div>
   </section>
   <footer>
-    <a href="#" class="logo">
+    <a href="#" class="logo footer-logo">
       <img class="logo-img" role="banner" src="assets/images/logo-101x150.png" alt="">
       <span class="logo-heading" aria-hidden="true">CONTENT <br> KARMA</span>
     </a>
-    <div>
+    <div id="footer-socials">
       <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
         <i class="fab fa-twitter"></i>
       </a>
