Style: Add decorative image below hero section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <button class="std-btn" type="submit">Contact us!</button>
     </form>
   </section>
+  <img id="wave" src="assets/images/wave.svg" alt="">
   <section id="services-section">
     <h2 class="section-heading">How we can help you?</h2>
     <div id="services-container">
