Style: Add decorative image to hero section
Targeted to large screen sizes only.

--- a/index.html
+++ b/index.html
@@ -29,14 +29,22 @@
     </nav>
   </header>
   <section id="hero-section">
-    <h1>Content production left you with no time to follow leads?</h1>
-    <p class="hero-paragraph">
-      We produce content to get your audience engaged, leaving you free to grow
-      your business.
-    </p>
-    <form action="#">
-      <button class="std-btn" type="submit">Contact us!</button>
-    </form>
+
+    <div id="hero-img-container">
+      <img src="assets/images/hero-blob.svg" class="hero-img-bg" alt="">
+      <img src="assets/images/hero-time.svg" class="hero-img-fg" alt="">
+    </div>
+
+    <div id="hero-container">
+      <h1>Content production left you with no time to follow leads?</h1>
+      <p class="hero-paragraph">
+        We produce content to get your audience engaged, leaving you free to grow
+        your business.
+      </p>
+      <form action="#">
+        <button class="std-btn" type="submit">Contact us!</button>
+      </form>
+    </div>
   </section>
   <img id="wave" src="assets/images/wave.svg" alt="">
   <section id="services-section">
