Feat: Add modal dialog for form submission

--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
     </nav>
   </header>
   <section id="hero-section">
-
     <div id="hero-img-container">
       <img src="assets/images/hero-blob.svg" class="hero-img-bg" alt="">
       <img src="assets/images/hero-time.svg" class="hero-img-fg" alt="">
     </div>
-
     <div id="hero-container">
       <h1>Content production left you with no time to follow leads?</h1>
       <p class="hero-paragraph">
@@ -230,7 +228,7 @@
   <section id="contact-section">
     <h2 class="section-heading">Get in touch</h2>
     <div id="contact-container">
-      <form action="#">
+      <form action="#open-modal">
         <label for="full-name">Name:</label>
         <input type="text" name="full-name" id="full-name" placeholder="Enter your name..">
         <label for="email">Email Address:</label>
@@ -249,6 +247,13 @@
       </form>
     </div>
   </section>
+  <div id="open-modal" class="modal-window">
+    <div>
+      <h2>Message sent!</h2>
+      <p>Thanks for getting in touch, we will get back to your shortly.</p>
+      <a href="." title="close" class="modal-close std-btn">Close</a>
+    </div>
+  </div>
   <footer>
     <a href="#" class="logo footer-logo">
       <img class="logo-img" role="banner" src="assets/images/logo-101x150.png" alt="">
