Fix: Add missing navigation anchor values

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </a>
     <nav id="navigation-container">
       <ul>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Pricing</a></li>
-        <li><a href="#">Testimonials</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#services-section">Services</a></li>
+        <li><a href="#team-section">Team</a></li>
+        <li><a href="#pricing-section">Pricing</a></li>
+        <li><a href="#testimonials-section">Testimonials</a></li>
+        <li><a href="#contact-section">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -39,7 +39,7 @@
         We produce content to get your audience engaged, leaving you free to grow
         your business.
       </p>
-      <form action="#">
+      <form action="#contact-section">
         <button class="std-btn" type="submit">Contact us!</button>
       </form>
     </div>
@@ -175,7 +175,7 @@
       </div>
     </div>
     <h3 class="section-heading">Not what you are looking for?</h3>
-    <form action="#">
+    <form action="#contact-section">
       <button class="std-btn" type="submit">Request Quote</button>
     </form>
   </section>
