--- a/index.html
+++ b/index.html
@@ -241,9 +241,8 @@
           <option value="discuss-packages">Discuss Packages</option>
         </select>
         <label for="message-content">Message:</label>
-        <textarea 
-          name="message-content" id="message-content" rows="10"
-          placeholder="Let us know how we can help.." required></textarea>
+        <textarea name="message-content" id="message-content" rows="10" placeholder="Let us know how we can help.."
+          required></textarea>
         <button class="std-btn" type="submit">Send Message</button>
       </form>
     </div>
@@ -251,7 +250,7 @@
   <div id="open-modal" class="modal-window">
     <div>
       <h2>Message sent!</h2>
-      <p>Thanks for getting in touch, we will get back to your shortly.</p>
+      <p>Thank you for your query, we will get back to you as soon as possible.</p>
       <a href="." title="close" class="modal-close std-btn">Close</a>
     </div>
   </div>
