Feat: Link the index and video pages
Add call to action buttons for each page to link them.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
         </p>
       </div>
     </div>
+    <h3 class="section-heading">Why is content marketing important for your business?</h3>
+    <a role="button" href="why-content-marketing.html" class="std-btn">Find out!</a>
   </section>
   <section id="team-section">
     <h2 class="section-heading">Meet the team!</h2>
