--- a/why-content-marketing.html
+++ b/why-content-marketing.html
@@ -33,6 +33,8 @@
     <div id="video-content">
       <div class="embedtool"><iframe src="https://www.youtube.com/embed/dMkOrLriJUQ" frameborder="0"
           allowfullscreen></iframe></div>
+          <h3 class="section-heading">See what we can offer..</h3>
+          <a role="button" href="./#services-section" class="std-btn">Services</a>
     </div>
   </section>
   <footer>
