Fix: Add aria-labels to all links which have no text content
Change made to improve accessibility as identified by the Google Chrome
Lighthouse developer tools.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <a href="#" class="logo">
+    <a class="logo" href="#" aria-label="Content Karma logo">
       <img class="logo-img" role="banner" src="assets/images/logo-101x150.png" alt="">
       <span class="logo-heading" aria-hidden="true">CONTENT <br> KARMA</span>
     </a>
@@ -100,10 +100,14 @@
           </p>
         </div>
         <div class="team-item-socials">
-          <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
+          <a href="https://twitter.com" target="_blank" rel="noopener
+          noreferrer" aria-label="Link to Twitter page of Lilly Stone,
+          Content Karma Brand Manager, (opens in a new window).">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
+          <a href="https://linkedin.com" target="_blank" rel="noopener
+          noreferrer" aria-label="Link to LinkedIn page of Lilly Stone, Content
+          Karma Brand Manager, (opens in a new window).">
             <i class="fab fa-linkedin-in"></i>
           </a>
         </div>
@@ -119,10 +123,14 @@
           </p>
         </div>
         <div class="team-item-socials">
-          <a href="https://medium.com/" target="_blank" rel="noopener noreferrer">
+          <a href="https://medium.com/" target="_blank" rel="noopener
+          noreferrer" aria-label="Link to Medium page of Paul Smith, Content
+          Karma Staff Writer, (opens in a new window).">
             <i class="fab fa-medium-m"></i>
           </a>
-          <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
+          <a href="https://linkedin.com" target="_blank" rel="noopener
+          noreferrer" aria-label="Link to LinkedIn page of Paul Smith, Content
+          Karma Staff Writer, (opens in a new window).">
             <i class="fab fa-linkedin-in"></i>
           </a>
         </div>
@@ -232,9 +240,11 @@
     <div id="contact-container">
       <form action="#open-modal">
         <label for="full-name">Name:</label>
-        <input type="text" name="full-name" id="full-name" placeholder="Enter your name.." required>
+        <input type="text" name="full-name" id="full-name" placeholder="Enter
+        your name.." required>
         <label for="email">Email Address:</label>
-        <input type="email" name="email" id="email" placeholder="Enter your email address.." required>
+        <input type="email" name="email" id="email" placeholder="Enter your
+        email address.." required>
         <label for="subject">Subject:</label>
         <select id="subject" name="subject" required>
           <option value="">-- Please select an option --</option>
@@ -243,8 +253,8 @@
           <option value="discuss-packages">Discuss Packages</option>
         </select>
         <label for="message-content">Message:</label>
-        <textarea name="message-content" id="message-content" rows="10" placeholder="Let us know how we can help.."
-          required></textarea>
+        <textarea name="message-content" id="message-content" rows="10"
+        placeholder="Let us know how we can help.." required></textarea>
         <button class="std-btn" type="submit">Send Message</button>
       </form>
     </div>
@@ -257,15 +267,19 @@
     </div>
   </div>
   <footer>
-    <a href="#" class="logo footer-logo">
+    <a href="#" class="logo footer-logo" aria-label="Content Karma logo">
       <img class="logo-img" role="banner" src="assets/images/logo-101x150.png" alt="">
       <span class="logo-heading" aria-hidden="true">CONTENT <br> KARMA</span>
     </a>
     <div id="footer-socials">
-      <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
+      <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"
+      aria-label="Link to Twitter page of Content Karma, (opens in a new
+      window).">
         <i class="fab fa-twitter"></i>
       </a>
-      <a href="https://facebook.com" target="_blank" rel="noopener noreferrer">
+      <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"
+      aria-label="Link to Facebook page of Content Karma, (opens in a new
+      window).">
         <i class="fab fa-facebook"></i>
       </a>
     </div>
