--- a/why-content-marketing.html
+++ b/why-content-marketing.html
@@ -33,20 +33,24 @@
     <div id="video-content">
       <div class="embedtool"><iframe src="https://www.youtube.com/embed/dMkOrLriJUQ" frameborder="0"
           allowfullscreen></iframe></div>
-          <h3 class="section-heading">See what we can offer..</h3>
-          <a role="button" href="./#services-section" class="std-btn">Services</a>
+      <h3 class="section-heading">See what we can offer..</h3>
+      <a role="button" href="./#services-section" class="std-btn">Services</a>
     </div>
   </section>
   <footer>
-    <a href="index.html" class="logo footer-logo">
+    <a href="index.html" class="logo footer-logo" aria-label="Content Karma logo">
       <img class="logo-img" role="banner" src="assets/images/logo-101x150.png" alt="">
       <span class="logo-heading" aria-hidden="true">CONTENT <br> KARMA</span>
     </a>
     <div id="footer-socials">
-      <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
+      <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"
+      aria-label="Link to Twitter page of Content Karma, (opens in a new
+      window).">
         <i class="fab fa-twitter"></i>
       </a>
-      <a href="https://facebook.com" target="_blank" rel="noopener noreferrer">
+      <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"
+      aria-label="Link to Facebook page of Content Karma, (opens in a new
+      window).">
         <i class="fab fa-facebook"></i>
       </a>
     </div>
