Refactor: Change non-form buttons to links

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         We produce content to get your audience engaged, leaving you free to grow
         your business.
       </p>
-      <form action="#contact-section">
-        <button class="std-btn" type="submit">Contact us!</button>
-      </form>
+      <a role="button" href="#contact-section" class="std-btn">
+        Contact us!
+      </a>
     </div>
   </section>
   <img id="wave" src="assets/images/wave.svg" alt="">
@@ -84,7 +84,9 @@
       </div>
     </div>
     <h3 class="section-heading">Why is content marketing important for your business?</h3>
-    <a role="button" href="why-content-marketing.html" class="std-btn">Find out!</a>
+    <a role="button" href="why-content-marketing.html" class="std-btn">
+      Find out!
+    </a>
   </section>
   <section id="team-section">
     <h2 class="section-heading">Meet the team!</h2>
@@ -185,9 +187,9 @@
       </div>
     </div>
     <h3 class="section-heading">Not what you are looking for?</h3>
-    <form action="#contact-section">
-      <button class="std-btn" type="submit">Request Quote</button>
-    </form>
+    <a role="button" href="#contact-section" class="std-btn">
+      Request Quote
+    </a>
   </section>
   <section id="testimonials-section">
     <h2 class="section-heading">What Customer say about us</h2>
