--- a/why-content-marketing.html
+++ b/why-content-marketing.html
@@ -14,8 +14,8 @@
 
 <body>
   <header>
-    <a href="index.html" class="logo">
-      <img class="logo-img" role="banner" src="assets/images/logo-101x150.png" alt="">
+    <a href="index.html" class="logo" aria-label="Content Karma logo">
+      <img class="logo-img" src="assets/images/logo-101x150.png" alt="">
       <span class="logo-heading" aria-hidden="true">CONTENT <br> KARMA</span>
     </a>
     <nav id="navigation-container">
@@ -31,7 +31,7 @@
   <section id="video-section">
     <h2 class="section-heading">Why invest in content marketing?</h2>
     <div id="video-content">
-      <div class="embedtool"><iframe src="https://www.youtube.com/embed/dMkOrLriJUQ" frameborder="0"
+      <div class="embedtool"><iframe title="Content Marketing Explained (video)" src="https://www.youtube.com/embed/dMkOrLriJUQ" frameborder="0"
           allowfullscreen></iframe></div>
       <h3 class="section-heading">See what we can offer..</h3>
       <a role="button" href="./#services-section" class="std-btn">Services</a>
@@ -39,7 +39,7 @@
   </section>
   <footer>
     <a href="index.html" class="logo footer-logo" aria-label="Content Karma logo">
-      <img class="logo-img" role="banner" src="assets/images/logo-101x150.png" alt="">
+      <img class="logo-img" src="assets/images/logo-101x150.png" alt="">
       <span class="logo-heading" aria-hidden="true">CONTENT <br> KARMA</span>
     </a>
     <div id="footer-socials">
