Fix: Address accessability issues with logo
Remove the banner role from the logo image in the header and the footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <a class="logo" href="#" aria-label="Content Karma logo">
-      <img class="logo-img" role="banner" src="assets/images/logo-101x150.png" alt="">
+      <img class="logo-img" src="assets/images/logo-101x150.png" alt="">
       <span class="logo-heading" aria-hidden="true">CONTENT <br> KARMA</span>
     </a>
     <nav id="navigation-container">
@@ -270,7 +270,7 @@
   </div>
   <footer>
     <a href="#" class="logo footer-logo" aria-label="Content Karma logo">
-      <img class="logo-img" role="banner" src="assets/images/logo-101x150.png" alt="">
+      <img class="logo-img" src="assets/images/logo-101x150.png" alt="">
       <span class="logo-heading" aria-hidden="true">CONTENT <br> KARMA</span>
     </a>
     <div id="footer-socials">
