Fix: Correct W3 validation problems

--- a/index.html
+++ b/index.html
@@ -243,11 +243,9 @@
     <div id="contact-container">
       <form action="#open-modal">
         <label for="full-name">Name:</label>
-        <input type="text" name="full-name" id="full-name" placeholder="Enter
-        your name.." required>
+        <input type="text" name="full-name" id="full-name" placeholder="Enter your name.." required>
         <label for="email">Email Address:</label>
-        <input type="email" name="email" id="email" placeholder="Enter your
-        email address.." required>
+        <input type="email" name="email" id="email" placeholder="Enter your email address.." required>
         <label for="subject">Subject:</label>
         <select id="subject" name="subject" required>
           <option value="">-- Please select an option --</option>
