--- a/why-content-marketing.html
+++ b/why-content-marketing.html
@@ -31,7 +31,7 @@
   <section id="video-section">
     <h2 class="section-heading">Why invest in content marketing?</h2>
     <div id="video-content">
-      <div class="embedtool"><iframe title="Content Marketing Explained (video)" src="https://www.youtube.com/embed/dMkOrLriJUQ" frameborder="0"
+      <div class="embedtool"><iframe title="Content Marketing Explained (video)" src="https://www.youtube.com/embed/dMkOrLriJUQ"
           allowfullscreen></iframe></div>
       <h3 class="section-heading">See what we can offer..</h3>
       <a role="button" href="./#services-section" class="std-btn">Services</a>
